# shiftcraft-api

./: .dockerignore  .env.development.local  .gitignore  CLAUDE.md  Dockerfile  README.md  app.js  docker-compose.yml  package-lock.json  package.json  pyproject.toml
DB/: supabase.js
app/api/: main.py  middleware.py
app/api/routes/: ai_router.py  employee_router.py  schedule_router.py  shift_router.py  shift_template_router.py
app/core/: auth.py  config.py  constants.py  db.py
app/models/: employee_model.py  schedule_model.py  shift_template_model.py  shifts_model.py
app/services/: ai_service.py  employee_service.py  schedule_generator_service.py  schedule_service.py  shift_template_service.py  shifts_service.py
app/tests/: conftest.py  test_ai_service.py  test_employee_service.py  test_root.py  test_schedule_generator_service.py  test_schedule_service.py  test_shift_template_service.py  test_shifts_service.py
config/: env.js  logger.js
controllers/: auth.controller.js
routes/: auth.routes.js  employee.routes.js  schedule.routes.js
supabase/: config.toml
supabase/migrations/: 20260314172521_initial_schema.sql
