[project]
name = "shiftcraft-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "supabase>=2.27.2",
    "uvicorn>=0.40.0",
]
